[package]
name = "appzap"
version = "0.1.0"
authors = ["jordanbertasso <36979824+jordanbertasso@users.noreply.github.com>"]
edition = "2018"
description = "A command line tool to uninstall MacOS apps and their related files."

[dependencies]
clap = "3.2.17"
dirs = "4.0.0"
glob = "0.3.0"
dialoguer = "0.10.2"
